--- a/views/payment-paypal.html
+++ b/views/payment-paypal.html
@@ -2,7 +2,7 @@
     <input type="hidden" name="cmd" value="_cart">
     <input type="hidden" name="upload" value="1">
     <INPUT TYPE="hidden" name="charset" value="utf-8">
-    <input type="hidden" name="business" value="financeiro@hcode.com.br">
+    <input type="hidden" name="business" value="email@email">     <!-- identifica o cliente no pagseguro -->
 
     {loop="$products"}
     <input type="hidden" name="item_name_{$counter+1}" value="{$value.desproduct}">
@@ -15,7 +15,7 @@
 
     <input type="hidden" name="email" value="{$order.desemail}">
 
-</form>
-<script>
-document.forms[0].submit();
+</form>  <!-- No script abaixo pega o unico formulario que tem na tela e manda -->
+<script>  
+document.forms[0].submit();       
 </script>
