--- a/views/payment-pagseguro.html
+++ b/views/payment-pagseguro.html
@@ -1,7 +1,7 @@
 <form method="post" action="https://pagseguro.uol.com.br/v2/checkout/payment.html">  
           
         <!-- Campos obrigatórios -->  
-        <input name="receiverEmail" type="hidden" value="gabrielaarend@yahoo.com.br">     <!-- identifica o cliente no pagseguro -->
+        <input name="receiverEmail" type="hidden" value="email@email">     <!-- identifica o cliente no pagseguro -->
         <input name="currency" type="hidden" value="BRL">  
         
         {loop="$products"} 
